--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,11 @@
             <artifactId>azure-core</artifactId>
             <version>1.45.1</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
